# Laura

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini
Laura/: CMakeLists.txt  imgui.ini  lrpch.h
Laura/Assets/: MeshLoader.cpp  MeshLoader.h
Laura/Components/: Camera.cpp  Camera.h  MaterialComponent.cpp  MaterialComponent.h  MeshComponent.cpp  MeshComponent.h  SkyboxComponent.cpp
Laura/Geometry/: Sphere.h  Triangle.h
Laura/ObjParser/: ObjParser.cpp  ObjParser.h
Laura/camera/: Camera.cpp  Camera.h  CameraHandler.cpp  CameraHandler.h
Laura/core/: ILayer.cpp  ILayer.h  IRenderingContext.cpp  IWindow.cpp  IWindow.h  ImGuiLayer.cpp  ImGuiLayer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  application.cpp  application.h
Laura/core/Events/: Events.cpp  Events.h  KeyCodes.h
Laura/events/: Events.cpp  Events.h  MouseCodes.h
Laura/include/core/: ILayer.h  IRenderingContext.h  IWindow.h  KeyCodes.h  LayerStack.h  Log.h  Renderer.h  application.h  events.h
Laura/include/core/camera/: CameraHandler.hpp
Laura/platform/OpenGL/: ComputeShader.cpp  ComputeTexture.cpp  OpenGLContext.cpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLdebugFuncs.cpp  OpenGLdebugFuncs.h
Laura/platform/OpenGL/context/: OpenGLContext.cpp  OpenGLContext.h
Laura/platform/OpenGL/textures/: ComputeTexture.cpp  ComputeTexture.h
Laura/platform/windows/: GLFWWindow.cpp  GLFWWindow.h
Laura/renderer/: BVHBuilder.cpp  BVHBuilder.h  IComputeShader.cpp  IComputeShader.h  IRendererAPI.cpp  IRendererAPI.h  IRenderingContext.h  IShaderStorageBuffer.cpp  ITexture.cpp  ITexture.h  IUniformBuffer.cpp  Material.h  Renderer.cpp  Renderer.h  RendererOld.cpp  RendererOld.h
Laura/renderer/BVH/: BVHBuilder.cpp  BVHBuilder.h
Laura/res/Shaders/: PathTracing.comp
Laura/resources/shaders/: ComputeRayTracing.comp  RayTracingDefault.comp
Laura/src/: IWindow.cpp  ImGuiLayer.cpp  Laura.h  LauraEntrypoint.h  LayerStack.cpp  Log.cpp  Renderer.cpp  application.cpp  events.cpp  lrpch.h
Laura/src/Assets/: AssetLoader.cpp  AssetLoader.h  AssetManager.cpp  AssetManager.h  AssetSystem.md  AssetTypes.h  Assets.cpp  Assets.h  BVHAccel.cpp  BVHAccel.h  MeshLoader.cpp  MeshLoader.h
Laura/src/Core/: DeltaTime.cpp  DeltaTime.h  GUID.cpp  GUID.h  ILayer.h  IWindow.cpp  IWindow.h  ImGuiContext.cpp  ImGuiContext.h  ImGuiLayer.cpp  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Profiler.cpp  Profiler.h  application.cpp  application.h
Laura/src/Core/Events/: IEvent.h  KeyEvents.h  MouseEvents.h  RenderEvents.h  SceneEvents.h  WindowEvents.h
Laura/src/Core/Layers/: ILayer.h  LayerStack.cpp  LayerStack.h  RenderLayer.cpp  RenderLayer.h  SceneLayer.cpp  SceneLayer.h
Laura/src/Export/: ExportUtilities.cpp  ProjectExporter.cpp
Laura/src/ObjParser/: ObjParser.cpp
Laura/src/Platform/OpenGL/: OpenGLComputeShader.cpp  OpenGLComputeShader.h  OpenGLContext.cpp  OpenGLImage2D.cpp  OpenGLImage2D.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShaderStorageBuffer.cpp  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLUniformBuffer.cpp
Laura/src/Platform/Windows/: GLFWWindow.cpp  GLFWWindow.h
Laura/src/Project/: ProjectManager.cpp  ProjectManager.h  ProjectUtilities.h
Laura/src/Project/Assets/: AssetManager.cpp  AssetManager.h  AssetTypes.h  BVHAccel.cpp  BVHAccel.h
Laura/src/Project/Scene/: Components.h  Entity.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Laura/src/Renderer/: IComputeShader.cpp  IImage2D.cpp  IImage2D.h  IRendererAPI.cpp  IRendererAPI.h  IShaderStorageBuffer.cpp  ITexture2D.cpp  ITexture2D.h  IUniformBuffer.cpp  Material.h  RenderSettings.h  Renderer.cpp  Renderer.h
Laura/src/Renderer/BVH/: BVHBuilder.cpp  BVHBuilder.h
Laura/src/Scene/: Components.cpp  Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneManager.md  Skybox.cpp  Skybox.h
Laura/src/camera/: Camera.cpp  CameraHandler.cpp
Laura/src/gl_util/: ComputeShader.cpp  ComputeTexture.cpp
Laura/src/res/Shaders/: PathTracing.comp  RayTracingDefault.comp
LauraEditor/: CMakeLists.txt
LauraEditor/res/: Default.lauratheme  DefaultLight.lrtheme  EditorState.yaml  EditorStatePersistent.yaml  default.lrtheme  default_imgui.ini  imgui.ini  template.lrtheme  template2.lrtheme  templateLight.lrtheme  templatenewver.lrtheme
LauraEditor/res/Models/: imgui.ini  model-credits.txt
LauraEditor/res/Skyboxes/: imgui.ini  skybox-credits.txt
LauraEditor/src/: EditorLayer.cpp  EditorLayer.h  EditorMain.cpp  EditorState.cpp  EditorState.h  EditorTheme.cpp  EditorTheme.h  ImGuiContext.cpp  ImGuiContext.h  ImGuiContextFontRegistry.h  LauraEditor.cpp
LauraEditor/src/Dialogs/ProjectDialogs/: ProjectDialogs.h
LauraEditor/src/EditorUI/: DNDPayloads.h  InspectorPanel.cpp  ProfilerPanel.cpp  ProfilerPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ThemesPanel.cpp  ThemesPanel.h  UtilityUI.h  ViewportPanel.cpp  ViewportPanel.h
LauraEditor/src/EditorUI/AssetsPanel/: AssetsPanel.cpp  AssetsPanel.h
LauraEditor/src/EditorUI/EditorTheme/: Theme.cpp  Theme.h  ThemePanel.cpp  ThemePanel.h
LauraEditor/src/EditorUI/Inspector/: InspectorPanel.cpp  InspectorPanel.h  TransformUI.h
LauraEditor/src/EditorUI/InspectorPanel/: InspectorPanel.cpp  InspectorPanel.h  TransformUI.h
LauraEditor/src/EditorUI/Launcher/: Launcher.cpp  Launcher.h
LauraEditor/src/EditorUI/MainMenuPanel/: ExportPanel.cpp  ExportPanel.h  MainMenuPanel.cpp  MainMenuPanel.h
LauraEditor/src/EditorUI/ProfilerPanel/: ProfilerPanel.cpp  ProfilerPanel.h
LauraEditor/src/EditorUI/RenderSettingsPanel/: RenderSettingsPanel.cpp  RenderSettingsPanel.h
LauraEditor/src/EditorUI/SceneHierarchyPanel/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
LauraEditor/src/EditorUI/ThemePanel/: ThemePanel.cpp  ThemePanel.h
LauraEditor/src/EditorUI/Themes/: EditorTheme.cpp  EditorTheme.h  (+1 more)
LauraEditor/src/WindowTitleBar/: WindowTitleBar.cpp  WindowTitleBar.h
LauraRuntime/: CMakeLists.txt
LauraRuntime/src/: RuntimeCfg.cpp  RuntimeCfg.h  RuntimeLayer.cpp  RuntimeLayer.h  RuntimeMain.cpp
(+51 files in other folders)
